# gf180mcu-tinyrv-radio

./: .gitmodules  README.md
asm/: .gitignore  Makefile.inc  README.md
asm/display/: main.s
asm/gpio/: Makefile  gpio.s
asm/misc/: Makefile  all_test.s  blinky.s  fib.s  fib_bak.s  freq_test.s  gpio.s  i2c_minimal.s  i2cce.s  i2ctest.s  memtest.s  test1.s  uart_test.s
c_toolchain/: CMakeLists.txt  csr.c  csr.h  demo.c  interrupts.c  interrupts.h  mmio.c  mmio.h  readable.sh  riscv.ld  start.s  wspr.c
cocotb/: chip_top_tb.py  gl_test.gtkw
ip/gf180mcu_ws_ip__ce/: Makefile
ip/gf180mcu_ws_ip__ce/gds/: gf180mcu_ws_ip__ce.gds  report.xml
ip/gf180mcu_ws_ip__ce/lef/: gf180mcu_ws_ip__ce.lef
ip/gf180mcu_ws_ip__ce/lib/: gf180mcu_ws_ip__ce.lib
ip/gf180mcu_ws_ip__ce/vh/: gf180mcu_ws_ip__ce.v
ip/gf180mcu_ws_ip__ce_logo/: Makefile
ip/gf180mcu_ws_ip__ce_logo/lef/: gf180mcu_ws_ip__ce_logo.lef
ip/gf180mcu_ws_ip__logo/: Makefile
librelane/: config.yaml  pdn_cfg.tcl
librelane/slots/: slot_0p5x0p5.yaml  slot_0p5x1.yaml  slot_1x0p5.yaml  slot_1x1.yaml
rtl/: .gitignore  Makefile  constants.sv  cpu.pcf
rtl/src/: alu.sv  chip_core.sv  chip_top.sv  constants.sv  control.sv  cpu.sv  csr.sv  i2c_master.sv  imm_gen.sv  instructioncounter.sv  memory.sv  regs.sv  slot_defines.svh  spi_master.sv  sram_sim.sv  uart_rx.v  uart_tx.v
rtl/tb/: cpu_tb.sv  fib160.txt  freq_generator_tb.sv  tinywhisper_riscv.gtkw
src/: alu.sv  chip_core.sv  control.sv  cpu.sv  csr.sv  imm_gen.sv  instructioncounter.sv  memory.sv  regs.sv  spi_master.sv  uart_tx.v
(+7 files in other folders)
